--- a/Examples/FEA copy/src/index.html
+++ b/Examples/FEA copy/src/index.html
@@ -2,6 +2,7 @@
 	<!-- Load plotly.js into the DOM -->
 	<script src='https://cdn.plot.ly/plotly-2.27.0.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js'></script>
+    <script src="a.out.js"></script>
 
 </head>
 
@@ -10,5 +11,13 @@
 	<div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
     <div id='myDiv2'></div>
     <div id='myDiv3'></div>
+    <input type="text" id="myInput">
+
+    <!-- Button to trigger the JavaScript function -->
+    
+
     <script type="module" src="script.js"></script>
+    <button id="submitButton">Submit</button>
 </body>
+
+
