--- a/Examples/FEA copy/src/index.html
+++ b/Examples/FEA copy/src/index.html
@@ -2,7 +2,7 @@
 	<!-- Load plotly.js into the DOM -->
 	<script src='https://cdn.plot.ly/plotly-2.27.0.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js'></script>
-    <script src="a.out.js"></script>
+    <script async src="output.js"></script>
 
 </head>
 
