lmao im in so much pain

--- a/Examples/FEA copy/src/index.html
+++ b/Examples/FEA copy/src/index.html
@@ -23,8 +23,9 @@
         <input type="text" id="bc4">
         
         <button id="submitButton">Submit</button>
+        <div id="plotDiv"></div>
     </div>
-    <input type="text" id="mat">
+    
 </body>
 
 
